feat(seriesdetail): split /series/{id}/recommendations endpoint
